fix: Improve the color for the icons and text in the footer for dark mode in united-dark.scss.

--- a/united-dark.scss
+++ b/united-dark.scss
@@ -142,6 +142,14 @@ pre {
 
 // }}}
 
+// Footer {{{
+
+.nav-footer a {
+  color: #9e9e9e !important;
+}
+
+// }}}
+
 // Post / Paper / Presentation Categories {{{
 
 div.quarto-post .listing-categories .listing-category {
